# pyskylight

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/pyskylight/: __init__.py  auth.py  cli.py  client.py  config.py  constants.py  errors.py  models.py
tests/: conftest.py  test_auth.py  test_cli.py  test_cli_full.py  test_client.py  test_config.py  test_errors.py  test_extra_coverage.py  test_full_coverage.py  test_models.py  test_sitting_model.py  test_sittings_mutations.py
