[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyskylight"
version = "0.2.0"
description = "Unofficial Python client and CLI for the Skylight Calendar / Buddy API"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Joshua Warren" }]
keywords = ["skylight", "calendar", "ourskylight", "api", "home-automation", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Home Automation",
]
dependencies = [
    "httpx>=0.27",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "respx>=0.21",
    "mypy>=1.10",
    "black>=24.0",
    "isort>=5.13",
    "flake8>=7.0",
]

[project.scripts]
skylight = "pyskylight.cli:app"

[project.urls]
Homepage = "https://github.com/joshuaswarren/pyskylight"
Repository = "https://github.com/joshuaswarren/pyskylight"
Issues = "https://github.com/joshuaswarren/pyskylight/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/pyskylight"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
ignore_missing_imports = true
files = ["src/pyskylight"]

[tool.pytest.ini_options]
addopts = "-ra -q --cov=pyskylight --cov-report=term-missing --cov-fail-under=90"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["pyskylight"]
